fancy-ass! actions

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
 		"lint": "prettier --check ."
 	},
 	"devDependencies": {
+		"@iconify-json/hugeicons": "^1.2.2",
+		"@iconify/utils": "^2.2.1",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.9.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
