--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
 		"vite": "^6.0.0"
 	},
 	"dependencies": {
-		"rambda": "^9.4.1"
+		"fflate": "^0.8.2",
+		"js-base64": "^3.7.7",
+		"nanoid": "^5.0.9",
+		"rambda": "^9.4.1",
+		"zod": "^3.24.1"
 	}
 }
